static/css/style.css
/* ... */
.post-nav-next .post-nav-teaser {
    padding-right: 1em
}

.post-nav-prev .post-nav-teaser {
    padding-left: 1em
}

.post-nav i {
    position: absolute;
    top: 50%;
    width: 2em;
    height: 2em;
    margin-top: -1em;
    font-size: 2em;
    line-height: 2em;
    text-align: center;
    transition: all ease-out 0.3s;
    color: #e5e4e1
}

.post-nav-next i {
    left: 0;
    margin-left: -1.75em
}

.post-nav-prev i {
    right: 0;
    margin-right: -1.75em
}

.post-nav a:hover i,
.post-nav a:focus i {
    color: #f26a3d
}

.post-nav-title {
    margin: 0 0 0.5em;
    padding: 0;
    font-size: 1em;
    line-height: 1em;
    color: inherit
}

.post-nav-excerpt {
    margin: 0;
    font-size: 0.75em;
    line-height: 1.333em
}

.pagination {
    position: relative;
    height: 2em;
    margin: 0;
    padding: 2em 0;
    font-family: 'Fira Sans', sans-serif
}

.pagination:after {
    position: absolute;
    width: 32em;
    height: 1px;
    left: 50%;
    bottom: 0;
    margin-left: -16em;
    content: '';
    background: #e5e4e1
}

.pagination a {
    position: relative;
    display: block;
    height: 1.333em;
    margin: -1px 0;
    padding: 0.666em 1em;
    z-index: 100;
    border: 1px solid #c2c7cc;
    font-size: 0.75em;
    line-height: 1.5em;
    text-align: center;
    text-decoration: none;
    color: #8a9199;
    transition: all ease 0.3s;
    border-radius: 2em
}

.pagination .pagination-prev {
    float: right;
    padding-left: 1.333em
}

.pagination .pagination-next {
    float: left;
    padding-right: 1.333em
}

.pagination a:hover,
.pagination a:focus {
    color: #f26a3d;
    border-color: #f26a3d
}

.pagination .pagination-label {
    position: relative;
    display: inline-block;
    height: 1em;
    line-height: 1em
}

.pagination a i {
    position: relative;
    width: auto;
    top: -1px;
    margin: auto;
    color: inherit;
    font-size: 0.75em;
    line-height: 1.333em
}

.pagination .pagination-info {
    position: absolute;
    width: 100%;
    height: 2.666em;
    left: 0;
    z-index: 50;
    display: block;
    font-size: 0.75em;
    line-height: 2.666em;
    text-align: center
}

.extra-pagination {
    display: none
}

.extra-pagination .pagination:after {
    top: auto;
    bottom: 0
}

.archive-template .extra-pagination {
    display: block
}

.tag-cloud {
    text-align: center;
    margin-bottom: 3em;
}

.tag {
    display: inline-block;
    padding: 0.2em 0.15em;
    vertical-align: middle;
}

.tag-weight-1  { font-size: 100%; }
.tag-weight-2  { font-size: 120%; }
.tag-weight-3  { font-size: 140%; }
.tag-weight-4  { font-size: 160%; }
.tag-weight-5  { font-size: 180%; }
.tag-weight-6  { font-size: 200%; }
.tag-weight-7  { font-size: 220%; }
.tag-weight-8  { font-size: 240%; }
.tag-weight-9  { font-size: 260%; }
.tag-weight-10 { font-size: 280%; }

@media only screen and (max-width: 960px) {
    #wrapper, #blog-header, #post-header {
        transform: translate3d(0, 0, 0)
    }
    .menu-active #wrapper,
    .menu-active #blog-header,
    .menu-active #post-header {
        padding-right: 0;
        transform: translate3d(-16em, 0, 0)
    }
    .blog-logo,
    .nav-button {
        position: absolute
    }
    #blog-author {
        margin: auto
    }
}

@media only screen and (max-width: 640px) {
    html {
        font-size: 50%
    }
    .post-share,
    .post-tags {
        max-width: none;
        float: none;
        margin: 0 0 2em
    }
    .post-share a {
        margin-left: 0;
        margin-right: 0.666em
    }
    .post-nav i {
        font-size: 1.5em
    }
}

@media only screen and (max-width: 480px) {
    .inner {
        padding: 0 16px
    }
    .post-template #main-header {
        padding: 16px 0
    }
    #main-nav a {
        margin: 16px
    }
    .post-author-avatar {
        margin: -0.25em 0 0 0.5em
    }
    .container .post.featured .post-title:after {
        left: 0;
        top: -1.75em
    }
    .post-content img,
    .post-content .fluid-width-video-wrapper {
        width: 100%;
        margin-left: auto
    }
    .post-nav:after {
        display: none
    }
    .post-nav-next,
    .post-nav-prev {
        display: block;
        width: 100%
    }
    .post-nav-teaser {
        position: relative;
        min-height: 4em;
        padding: 2em 0
    }
    .post-nav-next .post-nav-teaser:after {
        position: absolute;
        content: '';
        width: 100%;
        height: 1px;
        left: 0;
        bottom: 0;
        margin-bottom: -1px;
        background: #e5e4e1;
        z-index: 2
    }
    .post-nav-next .post-nav-teaser {
        padding-right: 0;
        padding-left: 1.5em
    }
    .post-nav-prev .post-nav-teaser {
        padding-left: 0;
        padding-right: 1.5em
    }
    .post-nav-next i {
        margin-left: -1em
    }
    .post-nav-prev i {
        margin-right: -1em
    }
}

@media only screen and (max-width: 320px) {
    .pagination .pagination-label {
        display: none
    }
}

.commento-logo-container
{
    display: none
}
#commento
{
    position: relative;
    background-color: white
}

#commento-loading
{
    display: block;
    height:0px;
    text-align: center;
}

